# structured-research

./: .gitignore  .importlinter  .pre-commit-config.yaml  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: quality.yml
config/templates/: constraints.template.json  domain_schema.template.json  schema.template.json  task.template.json  task_config.template.json  user_profile.template.json
docs/: API_CONTRACT_V1.md  ARCHITECTURE.md  CONFIG_TASK.md  USAGE.md  openapi_v1.json
docs/adr/: 0001-architecture-baseline.md
docs/resources/: README.md
examples/: README.md
examples/gen_cv/: request_example.json
examples/job_search/: run_request_example.json
examples/qa/: QA_PLAN.md
resources/prompts/: compose.py
scripts/: vulns_batch_triage.py  vulns_ingest_rag.py
src/structured_search/: __init__.py  cli.py  contracts.py
tests/: __init__.py  api_test_bundle.py  api_test_gen_cv.py  api_test_http_contract.py  api_test_ingest.py  api_test_run.py  api_test_service_di.py  conftest.py  integration_test_grounding.py  unit_test_application_dependencies.py  unit_test_application_gen_cv.py  unit_test_application_job_search.py  unit_test_architecture_import_guards.py  unit_test_cli.py  unit_test_gen_cv_cli.py  unit_test_gen_cv_service.py  unit_test_infra_llm.py  unit_test_job_search_sanitize.py  unit_test_loading.py  unit_test_models.py  unit_test_persistence.py  unit_test_run_service.py  unit_test_scorer.py  unit_test_scripts.py  unit_test_services.py  unit_test_shared_job_entry.py  unit_test_vuln_triage.py  unit_test_vuln_triage_scripts.py
ui/: .env.example  README.md  package-lock.json  package.json  vitest.config.ts
ui/app/: globals.css  layout.tsx  page.tsx
ui/components/: profile-selector.tsx  status-badge.tsx  (+1 more)
(+156 files in other folders)
